Added possibility to export the library as commonjs module.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@codevadmin/jquery-tmpl",
   "version": "1.0.4",
   "description": "The library was deprecated but some projects are still using it. This is jquery-tmpl commonjs implementation.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "directories": {
     "test": "tests"
   },
